--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url= jdbc:postgresql://localhost:5433/parking-control-db
-spring.datasource.username=postgres
-spring.datasource.password=M4v3r1ck
+spring.datasource.url= ${SSO_DB_HOST:jdbc:postgresql://10.79.60.14:5432/estacionamento-db}
+spring.datasource.username=${SSO_DB_USER:postgres}
+spring.datasource.password=${SSO_DB_PSWD:ysgDByb8DbWsagKpGwQkaxhgekjddGjAExJm}
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
